<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Common.LoginSignup.ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="146dp"
            android:layout_height="86dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_security" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forget_Password"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forget_Password_detail"
            android:textSize="18sp"
            android:fontFamily="@font/muli_light"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxBackgroundColor="@color/lightWhite"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/enter_email"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:background="@color/colorPrimary"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>



    </LinearLayout>

</ScrollView>