<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.Sign_up3rd_class"
    android:background="@color/colorPrimary"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_back_button"
            android:transitionName="transition_back_arrow_btn"/>

        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:transitionName="transition_title_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

         <com.hbb20.CountryCodePicker
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:ccp_autoDetectCountry="true"
             app:ccp_showFlag="true"
             app:ccp_showNameCode="true"
             app:ccp_showFullName="true"
             android:background="@drawable/black_border"
             android:padding="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/phone"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_phone"
                app:startIconTint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli_light"
                    android:textColor="@color/black"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <Button
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:onClick="callNextSignupScreen"
            android:elevation="5dp"
            android:transitionName="transition_next_btn"/>

        <Button
            android:id="@+id/signup_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:background="#00000000"
            android:fontFamily="@font/muli_light"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_login_btn"/>


    </LinearLayout>

</ScrollView>