<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:padding="30dp"
tools:context=".Common.LoginSignup.MakeSelection">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:padding="5dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/muli_black"
        android:text="@string/make_selection"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_selection_detail"
        android:textSize="18sp"
        android:fontFamily="@font/muli_light"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="180dp"
          android:layout_marginTop="50dp"
          android:background="@color/lightWhite"
          android:padding="10dp">

          <ImageView
              android:id="@+id/mobile_icon"
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/ic_phone_black"
              android:layout_centerVertical="true"
              android:layout_marginRight="20dp"/>

          <TextView
              android:id="@+id/mobile_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/via_sms"
              android:textSize="25sp"
              android:fontFamily="@font/muli_light"
              android:layout_toRightOf="@+id/mobile_icon"
              android:layout_marginTop="35sp"/>

          <TextView
              android:id="@+id/mobile_des"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="+91 8369457808"
              android:textSize="25sp"
              android:textColor="@color/black"
              android:fontFamily="@font/muli_light"
              android:layout_toRightOf="@+id/mobile_icon"
              android:layout_below="@+id/mobile_title"
              />

          <Button
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#00000000"/>


      </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:background="@color/lightWhite"
        android:padding="10dp">

        <ImageView
            android:id="@+id/mail_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_mail"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/mail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/via_mail"
            android:textSize="25sp"
            android:fontFamily="@font/muli_light"
            android:layout_toRightOf="@+id/mail_icon"
            android:layout_marginTop="35sp"/>

        <TextView
            android:id="@+id/mail_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="support@gmail.com"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_light"
            android:layout_toRightOf="@+id/mail_icon"
            android:layout_below="@+id/mail_title"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"/>

    </RelativeLayout>



</LinearLayout>

</ScrollView>